# RAG-Chatbot

./: .dockerignore  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  deploy-cloud-run.yml
docs/: cloud-run-iam.md  conflict-triage.md  network-test-notes.md
rag_chatbot/: __init__.py  api.py  chat.py  cli.py  config.py  embeddings.py  gcp.py  indexing.py  ingest.py  retrieval.py
tests/: test_api.py  test_chat.py  test_indexing.py
