[project]
name = "rag-chatbot"
version = "0.1.0"
description = "RAG-based chatbot starter"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

dependencies = [
  "google-cloud-aiplatform>=1.60.0",
  "google-cloud-storage>=2.14.0",
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.0",
]

[project.scripts]
rag-chatbot = "rag_chatbot.cli:main"

[tool.ruff]
line-length = 100
